--- a/src/app/blog-view/blog-view.component.html
+++ b/src/app/blog-view/blog-view.component.html
@@ -3,7 +3,7 @@
         <div class ="col-md-12" style="text-align:center">
             <h2>{{currentBlog.title}}</h2>
             <p>posted by {{currentBlog.author}} on {{currentBlog.created|date}}</p>
-            <p *ngIf="currentBlog.tags.length>0">tags:<span *ngFor ="let tag of currentBlog.tags; let first =first;let last =last;">{{tag}}{{last ? '':','}}</span></p>
+            <p *ngIf="currentBlog.tags!=undefined && currentBlog.tags.length>0">tags:<span *ngFor ="let tag of currentBlog.tags; let first =first;let last =last">{{tag}}{{last ? '':','}}</span></p>
             <hr>
             <div [innerHTML]="currentBlog.bodyHtml"></div>
             <hr>
