--- a/src/app/blog-edit/blog-edit.component.html
+++ b/src/app/blog-edit/blog-edit.component.html
@@ -1,1 +1,42 @@
-<p>blog-edit works!</p>
+<div class="container" *ngIf="currentBlog">
+    <h3>Edit this blog</h3>
+    <div class="row" style="text-align:left">
+      <div class="col-md-12">
+        <form #createBlogForm="ngForm" (ngSubmit)="editThisBlog()">
+  
+          <div class="form-group">
+  
+  
+            <label>Blog Title</label>
+            <input type="text" name="blogTitle" [(ngModel)]="currentBlog.blogTitle" #title="ngModel" class="form-control" placeholder="Enter blog Title"
+              required>
+  
+          </div>
+          <div [hidden]="title.valid || title.pristine" class="alert alert-danger">
+           Blog Title is required 
+          </div>
+  
+          <div class="form-group">
+            <label>Description</label>
+            <input type="text" name="blogDescription" [(ngModel)]="currentBlog.blogDescription" #description="ngModel" class="form-control" placeholder="Enter Description"
+              required>
+          </div>
+          <div class="form-group">
+            <label>Enter the blog body</label>
+            <textarea name="blogBody" [(ngModel)]="currentBlog.blogBody" #bodyHtml="ngModel" class="form-control" rows="3" required></textarea>
+          </div>
+          <div class="form-group">
+            <label>Category</label>
+            <select [(ngModel)]="currentBlog.blogCategory" #category="ngModel" name="blogCategory" class="form-control" id="category" required>
+                  <option *ngFor="let category of possibleCategory" [value]="category">{{category}}</option>
+                </select>
+          </div>
+  
+  
+          <button type="submit" class="btn btn-default" [disabled]="!createBlogForm.form.valid">Edit the blog</button>
+        </form>
+      </div>
+  
+    </div>
+  
+  </div>
