--- a/src/app/blog-view/blog-view.component.html
+++ b/src/app/blog-view/blog-view.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class ="col-md-4">
 
-            <a class="btn btn-danger">Delete</a>
+            <a class="btn btn-danger" (click) = "deleteThisBlog()" >Delete </a>
 
         </div>
         <div class="col-md-4">
